# Orchestral

./: .env.example  .gitignore  DEPLOYMENT_STATUS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup_billing.py  test_auth.py  test_checkout.py  test_signup.py  test_unlimited_passwords.py
.claude/: settings.local.json
api/: index.py
configs/: mcp.json
examples/: advanced_usage.py  basic_usage.py
src/orchestral/: __init__.py
src/orchestral/analytics/: __init__.py  cost_tracker.py  usage.py
src/orchestral/api/: __init__.py  auth.py  dashboard.py  db.py  enterprise.py  notifications.py  server.py  subscriptions.py
src/orchestral/billing/: __init__.py  api_keys.py  cache.py  rate_limiter.py  semantic_cache.py  stripe_integration.py  stripe_models.py  stripe_service.py  stripe_webhooks.py  usage.py
src/orchestral/cache/: __init__.py  embeddings.py  semantic.py
src/orchestral/cli/: __init__.py  main.py
src/orchestral/core/: __init__.py  config.py  models.py  orchestrator.py
src/orchestral/evaluation/: __init__.py  evaluator.py  metrics.py  scorer.py
src/orchestral/experiments/: __init__.py  ab_testing.py
src/orchestral/mcp/: __init__.py  server.py  tools.py
src/orchestral/observability/: __init__.py  audit.py  events.py  tracing.py
src/orchestral/optimization/: __init__.py  router.py
src/orchestral/prompts/: __init__.py  ab_testing.py  manager.py  optimizer.py
src/orchestral/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  openai_provider.py
src/orchestral/queue/: __init__.py  rate_limiter.py
src/orchestral/routing/: __init__.py  classifier.py  intelligent.py
src/orchestral/safety/: __init__.py  guardrails.py
src/orchestral/static/: about.html  auth.html  dashboard.html  docs.html  index.html  notifications.html  privacy.html  support.html  terms.html
src/orchestral/utils/: __init__.py  logging.py  metrics.py  retry.py
tests/: __init__.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_models.py  test_orchestrator.py  test_providers.py  test_utils.py
